--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;  
+  text-align: center;
 }
 
 img {
@@ -10,8 +11,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
+.container {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+  padding: 0 16px;
+}
+
+.item {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  max-width: 200px;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
