--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,8 +5,18 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+button {
+  padding: 8px 12px;
+}
 img {
   width: 600px;
 }
@@ -25,3 +35,35 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+.left-links, .right-links {
+  display: flex;
+  list-style-type: none;
+  gap: 12px;
+}
+
+.content {
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  flex: 1;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  gap: 12px;
+}
+
