--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,18 +2,28 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  /* height: 72px; */
   background: darkmagenta;
   color: white;
 }
 
-.footer {
-  height: 72px;
+h1 {
+  font-size: 32px;
+  font-weight: 900;
+  margin: 0;
+  padding: 16px;
+}
+
+.footer {  
   background: #eee;
   color: darkmagenta;
+  padding: 16px;
+  text-align: center;
 }
 
 .sidebar {
@@ -26,4 +36,45 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+.main {
+  display: flex;
+  /* flex-direction: column; */
+  flex: 1;
+}
+
+.sidebar {
+  width: 300px;
+  flex: 1 0 auto;
+  padding: 16px;
+}
+
+.content {
+  padding: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  /* flex: 1 1 auto; */
+}
+
+.card {
+  width: 29%;
+  padding: 8px;
+}
+
+li {
+  margin-bottom: 8px;
 }
